# osgc

./: .gitignore  CMakeLists.txt  osgc.sln  readme.md
bubble_pop/: CMakeLists.txt  bubble_pop.vcxproj  bubble_pop.vcxproj.filters  info.xgi  readme.md
bubble_pop/assets/levels/: Barricade.ini  BrakeOut.ini  Brit.ini  Cheery.ini  Duality.ini  Pits.ini  Rainbow.ini  Speed.ini  Spiral.ini  Starsnstripes.ini  Tarantula.ini  a.ini  beach.ini  befast.ini  bepatient.ini  bigbobbles.ini  colourado.ini  crossing.ini  dontwait.ini  dubblebubble.ini  easy.ini  falling.ini  fillit.ini  france.ini  gate.ini  getit.ini  greyorange.ini  isnteasy.ini  lambourg.ini  noname.ini  pacman.ini  pool.ini  prince.ini  quick.ini  rainbow2.ini  raster.ini  sarpshooter.ini  simplered.ini  training.ini  tricky.ini  (+10 more)
bubble_pop/assets/sprites/: blue.spt  cyan.spt  green.spt  grey.spt  magenta.spt  misc.spt  orange.spt  red.spt  yellow.spt
bubble_pop/include/: Animations.hpp  AttractState.hpp  BubbleSystem.hpp  CMakeLists.txt  CommandID.hpp  GameConsts.hpp  GameDirector.hpp  GameOverState.hpp  IniParse.hpp  LevelData.hpp  MainState.hpp  MessageIDs.hpp  NodeSet.hpp  PauseState.hpp  PlayerInput.hpp  Playlist.hpp  ResourceIDs.hpp  StateIDs.hpp
bubble_pop/src/: AttractState.cpp  BubbleSystem.cpp  CMakeLists.txt  EntryPoint.cpp  GameDirector.cpp  GameOverState.cpp  MainState.cpp  PauseState.cpp  PlayerInput.cpp  Playlist.cpp  SoundEffectsDirector.cpp
did/: CMakeLists.txt  buildnumber.hpp  did.vcxproj  did.vcxproj.filters  info.xgi  readme.md  resource.h
did/assets/fonts/: SIL Open Font License.txt
did/src/: Actor.hpp  ActorSystem.cpp  ActorSystem.hpp  AnimationCallbacks.hpp  AnimationSystem.cpp  AnimationSystem.hpp  AudioDelaySystem.cpp  AudioDelaySystem.hpp  AudioListener.hpp  AudioSource.cpp  AudioSource.hpp  AudioSystem.cpp  AudioSystem.hpp  BarrelSystem.cpp  BarrelSystem.hpp  BeeSystem.cpp  BeeSystem.hpp  BoatSystem.cpp  BoatSystem.hpp  BotSystem.cpp  BotSystem.hpp  BroadcastSystem.hpp  ButtonHighlightSystem.cpp  ButtonHighlightSystem.hpp  CMakeLists.txt  Camera3D.cpp  Camera3D.hpp  CarriableSystem.cpp  CarriableSystem.hpp  CircularBuffer.hpp  ClientBeeSystem.cpp  ClientBeeSystem.hpp  ClientCarriableCallback.hpp  ClientDecoySystem.cpp  ClientDecoySystem.hpp  ClientFlareSystem.cpp  ClientFlareSystem.hpp  ClientInfoManager.cpp  ClientInfoManager.hpp  ClientWeaponSystem.cpp  (+158 more)
did/src/glad/: glad.c  (+1 more)
fist/: CMakeLists.txt  fist.vcxproj  fist.vcxproj.filters  info.xgi  readme.md
fist/assets/: game.map
fist/include/: AnimationID.hpp  CMakeLists.txt  Camera3D.hpp  CameraInput.hpp  CameraTransportSystem.hpp  Collision.hpp  CommandIDs.hpp  ErrorState.hpp  GameConst.hpp  GameState.hpp  InputParser.hpp  MenuState.hpp  MessageIDs.hpp  ModelState.hpp  OBJ_Loader.h  PhysicsSystem.hpp  PlayerDirector.hpp  Render3DSystem.hpp  ResourceIDs.hpp  RoomBuilder.hpp  SharedStateData.hpp  SliderSystem.hpp  Sprite3D.hpp  StateIDs.hpp  WallData.hpp
fist/src/: CMakeLists.txt  Camera3D.cpp  CameraInput.cpp  CameraTransportSystem.cpp  EntryPoint.cpp  ErrorState.cpp  GameState.cpp  InputParser.cpp  MapLoader.cpp  MenuState.cpp  ModelIO.cpp  ModelState.cpp  PhysicsObject.cpp  PhysicsSystem.cpp  PlayerDirector.cpp  Render3DSystem.cpp  SliderSystem.cpp  Sprite3DShader.inl  Sprite3DSystem.cpp  UVShader.inl
lightmapper/lightmapper/: CMakeLists.txt  lightmapper.vcxproj  lightmapper.vcxproj.filters  readme.md
shooter/: CMakeLists.txt  info.xgi  readme.md  shooter.vcxproj  shooter.vcxproj.filters
shooter/assets/: credits.txt
shooter/include/: Alien.hpp  BobAnimator.hpp  Bomb.hpp  CMakeLists.txt  CollisionTypes.hpp  CollisionUtil.hpp  CommandIDs.hpp  Drone.hpp  GameConsts.hpp  GameOverState.hpp  GameState.hpp  Human.hpp  ItemBar.hpp  MapLoader.hpp  MenuConsts.hpp  MenuState.hpp  MessageIDs.hpp  Navigation.hpp  PauseState.hpp  PlayerDirector.hpp  PluginExport.hpp  RadarItemSystem.hpp  ResourceIDs.hpp  ScoreDirector.hpp  SoundEffectsDirector.hpp  SpawnDirector.hpp  StateIDs.hpp  TextCrawl.hpp
shooter/src/: AlienSystem.cpp  BombSystem.cpp  CMakeLists.txt  CollisionUtil.cpp  DroneSystem.cpp  EntryPoint.cpp  GameOverState.cpp  GameState.cpp  HumanSystem.cpp  ItemBarSystem.cpp  LoadingScreen.cpp  MapLoader.cpp  MenuState.cpp  PauseState.cpp  PlayerDirector.cpp  ScoreDirector.cpp  SliderSystem.cpp  SoundEffectsDirector.cpp  SpawnDirector.cpp  TextCrawl.cpp
space_racers/: CMakeLists.txt  info.xgi  readme.md  space_racers.vcxproj  space_racers.vcxproj.filters  technical.md
space_racers/include/: AIDriverSystem.hpp  ActorIDs.hpp  AnimationCallbacks.hpp  AsteroidSystem.hpp  CMakeLists.txt  Camera3D.hpp  CameraTarget.hpp  ClientPackets.hpp  CollisionObject.hpp  CommandIDs.hpp  DeadReckoningSystem.hpp  DebugState.hpp  DigitSystem.hpp  DummyClient.hpp  EliminationDirector.hpp  EliminationDotSystem.hpp  EngineAudioSystem.hpp  ErrorState.hpp  FastTrig.hpp  GameConsts.hpp  GameModes.hpp  GhostReplay.hpp  InputBinding.hpp  InputParser.hpp  InputPreviewSystem.hpp  InterpolationSystem.hpp  InverseRotationSystem.hpp  LapDotSystem.hpp  LightningSystem.hpp  LoadingScreen.hpp  LobbyState.hpp  LocalEliminationState.hpp  LocalRaceState.hpp  MapParser.hpp  MenuConsts.hpp  MenuState.hpp  MessageIDs.hpp  NetActor.hpp  NetConsts.hpp  NixieDisplay.hpp  (+27 more)
space_racers/original_version/: readme.md
space_racers/src/: AIDriverSystem.cpp  AnimationCallbacks.cpp  AsteroidSystem.cpp  BlurShader.inl  CMakeLists.txt  Camera3D.cpp  CameraTargetSystem.cpp  ClientLauncher.cpp  CollisionObject.cpp  DeadReckoningSystem.cpp  DebugState.cpp  DigitSystem.cpp  DummyClient.cpp  EliminationDirector.cpp  EliminationDotSystem.cpp  EntryPoint.cpp  ErrorState.cpp  GhostReplay.cpp  GlobeShader.inl  InputParser.cpp  InputPreviewSystem.cpp  InterpolationSystem.cpp  LapDotSystem.cpp  LightningSystem.cpp  LoadingScreen.cpp  LobbyState.cpp  LocalEliminationState.cpp  LocalRaceState.cpp  MapParser.cpp  MatrixPool.cpp  MenuShader.inl  MenuState.cpp  MonitorShader.inl  NeonBlendShader.inl  NetActorSystem.cpp  NixieDisplay.cpp  PauseState.cpp  RaceState.cpp  RenderPath.cpp  Server.cpp  (+22 more)
(+525 files in other folders)
